add single precision, add aa-vec-sl-soa kernel, updated doc
- Binaries have now a -dp or -sp suffix, depending on whether they have been
  compiled for double or single precision.

- New kernel for full array aa-vec-sl-soa added. Only one loop over the lattice
  used.

- Documentation has been updated, including how to build single precision
  binaries and performance graphs on various architectures.

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -1,7 +1,7 @@
 # --------------------------------------------------------------------------
 #
 # Copyright
-#   Markus Wittmann, 2016-2017
+#   Markus Wittmann, 2016-2018
 #   RRZE, University of Erlangen-Nuremberg, Germany
 #   markus.wittmann -at- fau.de or hpc -at- rrze.fau.de
 #
@@ -33,6 +33,5 @@ all: main
 main: main.rst
 #main.css
 	[ -d html ] || mkdir -p html
-#    rst2html --stylesheet=html4css1.css,main.css $< html/$@.html
-	rst2html --stylesheet=html4css1.css,main.css $< html/$@.html
+	rst2html --stylesheet=html4css1.css,main.css $< $@.html
 
