squased commits from internal repository
- doc: skylakesp2 results now with AVX512 intrinsics

- add AVX512 support for single precision intrinsics without
  gather/scatter

  The AVX512 intrinsics are divided into "pure" AVX512
  (load/store/compute) and AVX512-GATHER which include gather/scatter.

  This enables us to support at least AVX512 single precision intrinsics
  for all kernels which do not require gather/scatter support.

- fix test.sh: reenabled dp tests

- fix pull-split-nt: adjusted tmp array size to different vector
  lenghts

--- a/src/Makefile
+++ b/src/Makefile
@@ -277,6 +277,7 @@ endif
 ifeq (avx512,$(ISA))
   ifeq (dp,$(PRECISION))
     OBJ_C += $(OBJ_C_ISA_AVX_512)
+    PP_FLAGS += $(D)VECTOR_AVX512_GATHER
   endif
 endif
 
